# holly-android

./: .gitignore  PROJECT_SUMMARY.md  README.md  SETUP.md  build-release.sh  build.gradle.kts  build.sh  gradle.properties  gradlew  settings.gradle.kts
.github/: README.md
.github/workflows/: build-apk.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/holly/assistant/: HollyApplication.kt
app/src/main/java/com/holly/assistant/admin/: HollyDeviceAdminReceiver.kt
app/src/main/java/com/holly/assistant/llm/: LlamaEngine.kt
app/src/main/java/com/holly/assistant/receiver/: AlarmReceiver.kt  BootReceiver.kt  WatchdogReceiver.kt
app/src/main/java/com/holly/assistant/service/: FloatingBubbleService.kt  HollyAccessibilityService.kt  HollyNotificationListenerService.kt  HollyVoiceService.kt
app/src/main/java/com/holly/assistant/stt/: VoskSpeechRecognizer.kt
app/src/main/java/com/holly/assistant/tts/: PiperTTS.kt
app/src/main/java/com/holly/assistant/ui/: MainActivity.kt  MainViewModel.kt
app/src/main/java/com/holly/assistant/util/: CommandProcessor.kt  GestureResultCallback.kt  MemoryManager.kt  PreferenceManager.kt  WakeWordManager.kt
app/src/main/res/drawable/: ic_holly_heart.xml  ic_holly_notification.xml  ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: accessibility_strings.xml  colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service.xml  accessibility_service_config.xml  file_paths.xml
(+6 files in other folders)
